<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95FBB45C"
    tools:context=".Check_list">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/checklist_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="#80FFFFFF"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/framelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.134">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom3"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom4"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom6"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom7"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom8"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom9"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom10"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom11"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom12"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom13"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom14"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom15"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom16"
                android:textSize="25sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptom17"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintVertical_bias="0.661">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_btn"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>