<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95FBB45C">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/method_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F56E4A"
        app:layout_constraintBottom_toTopOf="@+id/method_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="#FFFFFF"
        app:tabSelectedTextColor="#FFFFFF"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/method" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/method_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/disease_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/method_tabLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emergency_function1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FBB45C"
        android:clickable="true"
        android:src="@drawable/fab_main"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/method_tabLayout"
        app:layout_constraintVertical_bias="0.908" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emergency_function3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#64DD17"
        android:clickable="false"
        android:src="@drawable/fab_emergency_room"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/emergency_function2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/method_tabLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emergency_function4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#00C853"
        android:clickable="false"
        android:src="@drawable/fab_pharmcy"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/emergency_function3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/method_tabLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emergency_function5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#00BFA5"
        android:clickable="true"
        android:src="@drawable/fab_aed"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/emergency_function4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/method_tabLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emergency_function2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#AEEA00"
        android:clickable="false"
        android:src="@drawable/fab_call"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/emergency_function1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/method_tabLayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/disease_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_btn"
        android:text="@string/button_text1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/method_view" />

</androidx.constraintlayout.widget.ConstraintLayout>